@@ -1,3 +1,11 @@
+2017-03-10  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	Back port from trunk
+	2017-03-01  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	PR target/79439
+	* gcc.target/powerpc/pr79439.c: New test.
+
 2017-03-02  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/79514
